Colaboratory を使用して作成しました

--- a/PythonBasic_4_Question_ipynb_のコピー.ipynb
+++ b/PythonBasic_4_Question_ipynb_のコピー.ipynb
@@ -146,41 +146,45 @@
       "source": [
         "# 入力用\n",
         "import random\n",
-        "def rannsuu():\n",
-        " x=[] \n",
-        " for i in range(5):\n",
-        "  while True:\n",
-        "   c=random.randint(1,10)\n",
-        "   if c not in x:\n",
-        "    x.append(c)\n",
-        "    break\n",
-        " x.sort()   \n",
-        " return x\n",
-        "a=rannsuu()\n",
-        "b=rannsuu()\n",
-        "print('1つ目のリスト:',a)\n",
-        "print('2つ目のリスト:',b)\n",
-        "c=set(a+b)\n",
-        "print('足し合わせたリスト:',c)\n",
+        "a=[]\n",
+        "b=[]\n",
+        "c=[]\n",
+        "while len(a)<5:\n",
+        "    x=random.randint(1,9)\n",
+        "    if x not in a:\n",
+        "      a.append(x)\n",
+        "while len(b)<5:          \n",
+        "    y=random.randint(1,9)\n",
+        "    if y not in b:\n",
+        "      b.append(y)\n",
+        "for i in range(5):      \n",
+        " c.append(a[i]+b[i])\n",
+        "print(a)\n",
+        "print(b)  \n",
+        "print(c)  \n",
+        "\n",
+        "  \n",
+        "\n",
+        "\n",
         "\n",
         "              \n"
       ],
       "metadata": {
         "id": "TaJm8jn2MHmk",
-        "outputId": "77ca398c-0c82-41cf-d4df-93dc8b7000f2",
+        "outputId": "d9cdd4dd-c6fc-4283-96e0-56a43df1dfe5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1つ目のリスト: [1, 2, 3, 8, 9]\n",
-            "2つ目のリスト: [1, 6, 7, 8, 9]\n",
-            "足し合わせたリスト: {1, 2, 3, 6, 7, 8, 9}\n"
+            "[4, 2, 1, 8, 7]\n",
+            "[9, 1, 7, 2, 5]\n",
+            "[13, 3, 8, 10, 12]\n"
           ]
         }
       ]
