Colaboratory を使用して作成しました

--- a/PythonBasic_6_Question_ipynb_のコピー.ipynb
+++ b/PythonBasic_6_Question_ipynb_のコピー.ipynb
@@ -141,7 +141,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2737a4c8-b53b-44ef-ad71-3b33e0752535"
+        "outputId": "42bb3b17-40e3-4d02-9be4-49c09d2e64e2"
       },
       "execution_count": 7,
       "outputs": [
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "bjoi1QqQs1fb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
         "id": "YtLAWBb7uQYQ",
         "outputId": "9966900c-1862-4b36-e0c0-6c5c0fe12646"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +256,7 @@
         "id": "_jUMSdbfvo98",
         "outputId": "0faa0a0a-bdfc-4d2f-94c3-6c2053e75a83"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
         "id": "qU70uV_Owg4T",
         "outputId": "2368a8d0-7bd4-4bb2-a4bb-e6e239a504d9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
         "id": "JQZ4wUvMxXLi",
         "outputId": "33205379-0563-49aa-c7aa-b9f1104fa1d1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
         "id": "ynG38NTvyG4v",
         "outputId": "6a61539a-4f9b-4954-d864-9055988e8551"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +493,7 @@
       "metadata": {
         "id": "5rhhPCjGxPxP"
       },
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -534,9 +534,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4e11753b-9289-44de-d217-902fbef6e157"
+        "outputId": "c9ac3b7e-c0bf-48a8-bb4c-ab04a2b359ee"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +595,7 @@
         "id": "83OyhJkDGupg",
         "outputId": "7ff1e3fc-62ab-45cd-f6f1-666ac66a8971"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +673,7 @@
       "metadata": {
         "id": "xL2nPwOVGs4u"
       },
-      "execution_count": 17,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -700,44 +700,46 @@
       "metadata": {
         "id": "hzQ83qvxHubl"
       },
-      "execution_count": 18,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 入力用\n",
-        "su1=0\n",
-        "a=[]\n",
-        "b=[]\n",
-        "c=len(seiseki_data['授業'])\n",
-        "d=seiseki_data['成績']\n",
-        "for i in seiseki_data['授業']:\n",
-        "  if i in one_unit_class:\n",
-        "    a.append(1)\n",
-        "  else:\n",
-        "    a.append(2)\n",
-        "print(a)   \n",
-        "print(c)   \n",
-        "for x in d:\n",
-        "   x = x.replace(\"秀\",\"4\").replace(\"優\",\"3\").replace(\"良\",\"2\").replace(\"可\",\"1\").replace(\"不可\",\"0\")\n",
-        "   b.append(int(x))\n",
-        "print(b)\n",
-        "for j in range(c):\n",
-        "  su1=su1+a[j]*b[j] \n",
-        "print(su1) \n",
+        "def GPA(seiseki_data,one_unit_class):\n",
+        " su1=0\n",
+        " a=[]\n",
+        " b=[]\n",
+        " c=len(seiseki_data['授業'])\n",
+        " d=seiseki_data['成績']\n",
+        " for i in seiseki_data['授業']:\n",
+        "   if i in one_unit_class:\n",
+        "     a.append(1)\n",
+        "   else:\n",
+        "     a.append(2)\n",
+        " print(a)   \n",
+        " print(c)   \n",
+        " for x in d:\n",
+        "    x = x.replace(\"秀\",\"4\").replace(\"優\",\"3\").replace(\"良\",\"2\").replace(\"可\",\"1\").replace(\"不可\",\"0\")\n",
+        "    b.append(int(x))\n",
+        " print(b)\n",
+        " for j in range(c):\n",
+        "   su1=su1+a[j]*b[j] \n",
+        " print(su1)  \n",
+        " print(sum(a))\n",
+        " print(\"GPA\",su1/sum(a))\n",
         "\n",
-        "print(sum(a))\n",
-        "print(\"GPA\",su1/sum(a))"
+        "GPA(seiseki_data,one_unit_class) "
       ],
       "metadata": {
         "id": "fABnfUJzPgLw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9195e97a-6d9a-45ca-a719-10639d1ce447"
+        "outputId": "d9df1104-2111-41c8-a518-a2a4b6606896"
       },
-      "execution_count": 19,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
